# python-django-development-project-52

./: .codeclimate.yml  .gitignore  README.md  build.sh  manage.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt
labels/: forms.py  models.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_labels_created_at.py
labels/templates/labels/: labels_create.html  labels_delete.html  labels_list.html  labels_update.html
labels/tests/: test_views.py
statuses/: models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_statuses_name.py
statuses/templates/statuses/: statuses_create.html  statuses_delete.html  statuses_list.html  statuses_update.html
statuses/tests/: test_views.py
task_manager/: constants.py  forms.py  settings.py  urls.py  views.py
task_manager/templates/: base_template.html  footer.html  index.html  navigation.html
task_manager/templates/registration/: login.html
task_manager/tests/: test_views.py
tasks/: filters.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_tasks_author_alter_tasks_created_at_and_more.py  0002_initial.py  0003_alter_tasks2labels_task.py  0003_alter_tasks_description_alter_tasks_executor_and_more.py  0004_alter_tasks_executor.py
tasks/templates/tasks/: tasks_create.html  tasks_delete.html  tasks_detail.html  tasks_filter.html  tasks_list.html  tasks_update.html
tests/: test_views.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_views.py
(+9 files in other folders)
